--- a/modules/API_OLED/requirements.txt
+++ b/modules/API_OLED/requirements.txt
@@ -1,4 +1,6 @@
-adafruit-circuitpython-ssd1306
+#adafruit-circuitpython-ssd1306
 rpi-gpio
-pillow
+rpi-lgpio
+luma.oled
+luma.core
 opencv-python # 可选，只在"模拟模式"使用
