重构语音模块，改用讯飞stt，优化语音对话体验，增加思考动画

--- a/configs/.env-example
+++ b/configs/.env-example
@@ -13,3 +13,10 @@ LLM_MODEL_NAME="Qwen/Qwen3-32B"
 
 # SiliconFlow API Key
 SILICONFLOW_API_KEY="your_siliconflow_api_key_here"
+
+
+# --- 讯飞语音配置 (stt_provider = 'iflytek' 时使用) ---
+# 在讯飞开放平台 (https://www.xfyun.cn/) 创建应用后获取
+IFLYTEK_APP_ID=
+IFLYTEK_API_KEY=
+IFLYTEK_API_SECRET=
