--- a/configs/.env-example
+++ b/configs/.env-example
@@ -1,22 +1,20 @@
-# 请把 .env-example 文件复制一份, 重命名为 .env
-# 再填写你的 API Key
+# 使用方法: 把 .env-example 复制为 .env 再填写自己的 API Key
 
 
 # LLM 服务提供商的 Base URL
 LLM_BASE_URL="https://api.siliconflow.cn/v1"
 
 # LLM 服务的 API Key
-LLM_API_KEY="your_llm_api_key_here"
+LLM_API_KEY="sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
 # 使用的模型名称
 LLM_MODEL_NAME="Qwen/Qwen3-32B"
 
 # SiliconFlow API Key
-SILICONFLOW_API_KEY="your_siliconflow_api_key_here"
-
+SILICONFLOW_API_KEY="sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
 # --- 讯飞语音配置 (stt_provider = 'iflytek' 时使用) ---
 # 在讯飞开放平台 (https://www.xfyun.cn/) 创建应用后获取
-IFLYTEK_APP_ID=
-IFLYTEK_API_KEY=
-IFLYTEK_API_SECRET=
+IFLYTEK_APP_ID="c1eca680"
+IFLYTEK_API_KEY="5dfe59ca36641de7dadc0948d7240f2b"
+IFLYTEK_API_SECRET="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
