--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,15 @@ flask
 # --- Car Control ---
 evdev; sys_platform == 'linux'
 pygame
+
 # --- 语音唤醒 ---
 openwakeword
 speexdsp-ns  # apt-get install libspeex-dev libspeexdsp-dev
 #pip install --upgrade "numpy<2"
+
 # --- 人脸跟踪 ---
 simple_pid
 mediapipe==0.10.9
+
+# --- 温湿度传感器 ---
+adafruit-circuitpython-dht
